tests/should_fail/fn_void_used_as_value.nv
module fn_void_used_as_value

import super.std.core

// Void return used in expression
fn nothing() {}

let x = nothing() + 1
